# tlmend

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: tl-mend-SDLC-plan.md
examples/reverend-insanity/: config.toml  glossary.json
tests/: conftest.py  test_adapters.py  test_concurrency.py  test_diff_classify.py  test_epub_e2e.py  test_glossary.py  test_models.py  test_orchestrator.py  test_resolve.py  test_validate.py
tlmend/: __init__.py  cli.py  models.py
tlmend/adapters/input/: __init__.py  base.py  epub.py  txt.py
tlmend/adapters/output/: __init__.py  base.py  epub.py  txt.py
tlmend/glossary/: __init__.py  loader.py
tlmend/pipeline/: assemble.py  diff_classify.py  edit.py  orchestrator.py  resolve.py  validate.py
tlmend/providers/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  openai_compat.py
tlmend/store/: __init__.py  db.py
